--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 asgiref==3.7.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
+distlib==0.3.7
 Django==4.2.7
 djangorestframework==3.14.0
+filelock==3.13.1
 greenlet==3.0.0
 idna==3.4
 iniconfig==2.0.0
 packaging==23.2
+Pillow==10.1.0
+pipenv==2023.10.24
+platformdirs==3.11.0
 playwright==1.39.0
 pluggy==1.3.0
 pyee==11.0.1
@@ -20,3 +25,4 @@ sqlparse==0.4.4
 text-unidecode==1.3
 typing_extensions==4.8.0
 urllib3==2.0.7
+virtualenv==20.24.6
