--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ sqlparse = "==0.4.4"
 text-unidecode = "==1.3"
 typing-extensions = "==4.8.0"
 urllib3 = "==2.0.7"
+django-cors-headers = "*"
 
 [dev-packages]
 
