--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
     "builds": [{
         "src": "smartreport/wsgi.py",
-        "use": "@ardnt/vercel-python-wsgi",
-        "config": { "maxLambdaSize": "25mb" }
+        "use": "@natanffs/vercel-python-wsgi",
+        "config": { "maxLambdaSize": "25mb" },
+        "runtime": "python3.9"
     }],
     "routes": [
         {
