--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pipenv==2023.10.24
 platformdirs==3.11.0
 playwright==1.39.0
 pluggy==1.3.0
+psycopg2-binary==2.9.9
 pyee==11.0.1
 pytest==7.4.3
 pytest-base-url==2.0.0
@@ -29,4 +30,3 @@ tomli==2.0.1
 typing_extensions==4.8.0
 urllib3==2.0.7
 virtualenv==20.24.6
-psycopg2-binary
