--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [{
         "src": "smartreport/wsgi.py",
-        "use": "@natanffs/vercel-python-wsgi",
+        "use": "@vercel/python",
         "config": { "maxLambdaSize": "25mb" }
     }],
     "routes": [
