--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+smartreport/static
+smartreport_app/migrations
 # C extensions
 *.so
-
+db.sqlite3
 # Distribution / packaging
 .Python
 build/
