--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.3.2
 distlib==0.3.7
 Django==4.2.7
 django-cors-headers==4.3.0
+django-filter==23.3
 djangorestframework==3.14.0
 exceptiongroup==1.1.3
 filelock==3.13.1
