--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pyee==11.0.1
 pytest==7.4.3
 pytest-base-url==2.0.0
 pytest-playwright==0.4.3
+python-dotenv==1.0.0
 python-slugify==8.0.1
 pytz==2023.3.post1
 requests==2.31.0
@@ -31,3 +32,4 @@ tomli==2.0.1
 typing_extensions==4.8.0
 urllib3==2.0.7
 virtualenv==20.24.6
+whitenoise==6.6.0
