--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     }
     ,
     {
-        "src": "build_static.sh",
+        "src": "build_files.sh",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "staticfiles_build"
