Update to actions

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 __pycache__/
 *.py[cod]
 *$py.class
-smartreport/static
 smartreport_app/migrations
 # C extensions
 *.so
@@ -162,3 +161,6 @@ cython_debug/
 
 # node_modules
 node_modules
+
+# Static files
+staticfiles_build
