--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Pillow==10.1.0
 pipenv==2023.10.24
 platformdirs==3.11.0
 playwright==1.39.0
+djangorestframework-guardian==0.3.0
 pluggy==1.3.0
 psycopg2-binary==2.9.9
 pyee==11.0.1
