a lot of things

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
-        "smartreport"
+        "kpis",
+        "smartreport",
+        "uids"
     ],
     "editor.inlineSuggest.showToolbar": "always"
 }
