--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,54 @@
+amqp==5.2.0
 asgiref==3.7.2
+billiard==4.2.0
+celery==5.3.6
 certifi==2023.7.22
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 distlib==0.3.7
 Django==4.2.7
 django-cors-headers==4.3.0
 django-filter==23.3
+django-guardian==2.4.0
 djangorestframework==3.14.0
+djangorestframework-guardian==0.3.0
 exceptiongroup==1.1.3
 filelock==3.13.1
 greenlet==3.0.0
 idna==3.4
 iniconfig==2.0.0
+kombu==5.3.4
+numpy==1.26.1
 packaging==23.2
+pandas==2.1.2
 Pillow==10.1.0
 pipenv==2023.10.24
 platformdirs==3.11.0
 playwright==1.39.0
-djangorestframework-guardian==0.3.0
 pluggy==1.3.0
+prompt-toolkit==3.0.41
 psycopg2-binary==2.9.9
 pyee==11.0.1
 pytest==7.4.3
 pytest-base-url==2.0.0
 pytest-playwright==0.4.3
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-slugify==8.0.1
 pytz==2023.3.post1
 requests==2.31.0
+scipy==1.11.3
+six==1.16.0
 sqlparse==0.4.4
 text-unidecode==1.3
 tomli==2.0.1
 typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.0.7
+vine==5.1.0
 virtualenv==20.24.6
+wcwidth==0.2.12
 whitenoise==6.6.0
