--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,6 @@ Django==4.2.7
 django-cors-headers==4.3.0
 django-filter==23.3
 django-guardian==2.4.0
-django-storage-supabase==0.1.0
 djangorestframework==3.14.0
 djangorestframework-guardian==0.3.0
 exceptiongroup==1.1.3
@@ -58,7 +57,6 @@ scipy==1.11.3
 six==1.16.0
 sniffio==1.3.0
 sqlparse==0.4.4
-supabase==0.0.3
 text-unidecode==1.3
 toml==0.10.2
 tomli==2.0.1
@@ -70,3 +68,5 @@ virtualenv==20.24.6
 wcwidth==0.2.12
 websockets==9.1
 whitenoise==6.6.0
+matplotlib~=3.8.2
+supabase-py
