--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ filelock==3.13.1
 gotrue==0.2.0
 greenlet==3.0.0
 h11==0.12.0
-httpcore==0.13.7
+httpcore==0.12.*
 httpx==0.16.1
 idna==2.10
 iniconfig==2.0.0
