--- a/requirements.txt
+++ b/requirements.txt
@@ -22,11 +22,8 @@ djangorestframework==3.14.0
 djangorestframework-guardian==0.3.0
 exceptiongroup==1.1.3
 filelock==3.13.1
-gotrue==0.2.0
 greenlet==3.0.0
 h11==0.12.0
-httpcore==0.12.*
-httpx==0.16.1
 idna==2.10
 iniconfig==2.0.0
 kombu==5.3.4
@@ -38,7 +35,6 @@ pipenv==2023.10.24
 platformdirs==3.11.0
 playwright==1.39.0
 pluggy==1.3.0
-postgrest-py==0.4.0
 prompt-toolkit==3.0.41
 psycopg2-binary==2.9.9
 py==1.11.0
@@ -70,3 +66,4 @@ websockets==9.1
 whitenoise==6.6.0
 matplotlib~=3.8.2
 supabase-py==0.0.2
+supabase
