--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,11 @@ djangorestframework==3.14.0
 djangorestframework-guardian==0.3.0
 exceptiongroup==1.1.3
 filelock==3.13.1
+gotrue==0.2.0
 greenlet==3.0.0
 h11==0.12.0
+httpcore==0.13.7
+httpx==0.19.0
 idna==2.10
 iniconfig==2.0.0
 kombu==5.3.4
@@ -34,7 +37,9 @@ Pillow==10.1.0
 pipenv==2023.10.24
 platformdirs==3.11.0
 playwright==1.39.0
+plotly==5.18.0
 pluggy==1.3.0
+postgrest-py==0.5.0
 prompt-toolkit==3.0.41
 psycopg2-binary==2.9.9
 py==1.11.0
@@ -47,11 +52,13 @@ python-dotenv==1.0.0
 python-slugify==8.0.1
 pytz==2023.3.post1
 realtime-py==0.1.3
+requests==2.25.1
 rfc3986==1.5.0
 scipy==1.11.3
 six==1.16.0
 sniffio==1.3.0
 sqlparse==0.4.4
+tenacity==8.2.3
 text-unidecode==1.3
 toml==0.10.2
 tomli==2.0.1
@@ -63,4 +70,3 @@ virtualenv==20.24.6
 wcwidth==0.2.12
 websockets==9.1
 whitenoise==6.6.0
-matplotlib~=3.8.2
